--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Site Title</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste placeat dignissimos ipsum accusantium sit blanditiis atque quia facilis eaque, enim a amet vel sapiente accusamus dolore? Ipsa saepe ducimus minus.</p>
+</body>
+</html>
